<resources>
    <string name="app_name">MecenApp</string>
    <string name="login">Se connecter</string>
    <string name="noString"> </string>
    <string name="loading">Chargement . . .</string>
    <string name="creation">Création . . .</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_room">Créer une Conversation</string>
    <string name="add_members">Ajouter des membres</string>
    <string name="selection">Sélection des membres :</string>
    <string name="selected">Sélectionés :</string>
    <string name="select_orga">Sélection de l\'organisation :</string>
    <string name="add_user">Ajouter</string>
    <string name="del_user">Retirer</string>
    <string name="my_chats">Mes conversations</string>
    <string name="asked_ressources">Ressouces demandées</string>
    <string name="activities_domains">Domaines d\'activités</string>
    <string name="description">Description</string>
    <string name="organisation">Organisation</string>
    <string name="name">Nom</string>
    <string name="enter_msg">Saisir un message</string>
</resources>
