<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_members"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_orga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/select_orga"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/orga_spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/orga_spinner"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/gradient_grey_border_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/selection_members"
        app:layout_constraintTop_toBottomOf="@+id/select_orga" />

    <TextView
        android:id="@+id/selection_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selection"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/selection"
        app:layout_constraintTop_toBottomOf="@+id/orga_spinner" />

    <LinearLayout
        android:id="@+id/selection"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selected_members"
        app:layout_constraintTop_toBottomOf="@+id/selection_members">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/selection_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/selected_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selected"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/selected"
        app:layout_constraintTop_toBottomOf="@+id/selection" />

    <LinearLayout
        android:id="@+id/selected"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_members">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/selected_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_room_button"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/create_room"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>